<resources>
    <string name="app_name">PigDice</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="view">View</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="notifications">Notifications</string>
    <string name="Sound">Sound</string>
    <string name="select">select</string>
    <string name="default_dice">Default Dice</string>
    <string name="silver_dice">Silver Dice</string>
    <string name="gold_dice">Gold Dice</string>
    <string name="white_dice">White Dice</string>
    <string name="roll">ROLL</string>

    <string name="turn_score">Turn Score</string>
    <string name="hold">HOLD</string>
    <string name="vs_computer">VS Computer</string>
    <string name="single_player">Single Player</string>
    <string name="settings">SETTINGS</string>
    <string name="skins">Skins</string>
    <string name="give_up">give_up</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="image">image</string>
    <string name="did_you_like_the_video">Did you like the video?</string>
    <string name="Are_you_sure">Are_you_sure</string>
    <string name="player_score">Player Score</string>
    <string name="computer_score">Computer Score</string>
    <string name="_0">0</string>
    <string name="Rematch">Rematch</string>
    <string name="todo">TODO</string>


</resources>
