<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skins"
    android:background="@drawable/background3"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08df00"
        android:layout_margin="20sp"
        >

        <ImageView
            android:id="@+id/whiteDice"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/white"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:layout_marginStart="20sp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/default_dice"
            android:layout_marginTop="45sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="110sp"
            android:textSize="18sp"/>
        <Button
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="230sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08df00"
        android:layout_margin="20sp"
        >
        <ImageView
            android:id="@+id/goldDice"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/gold"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/gold_dice"
            android:layout_marginTop="45sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="110sp"
            android:textSize="18sp"/>
        <Button
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="230sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08df00"
        android:layout_margin="20sp"
        >

        <ImageView
            android:id="@+id/silverDice"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/silver"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/silver_dice"
            android:layout_marginTop="45sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="110sp"
            android:textSize="18sp"/>
        <Button
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="230sp"/>

    </RelativeLayout>

</LinearLayout>